--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "apollo-server": "^2.24.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.3"
   }
 }
