--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,15 +4,16 @@
         "node": true
     },
     "extends": [
-        "airbnb-base",
+        "airbnb-base"
     ],
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
     "rules": {
-        "semi": [2, "never"],
+        // "semi": [2, "never"],
         "import/prefer-default-export": 0,
-        "import/extensions": [2, "always"]
+        "import/extensions": [2, "always"],
+        "no-console": "warn"
     }
 }
