--- a/.env_example_local
+++ b/.env_example_local
@@ -3,3 +3,9 @@ API_URL=api.local.tgs.com
 HTTP_PORT=80
 HTTPS_PORT=443
 CERTIFICATE_EMAIL=mateusz@gmail.com
+
+#DATABASE
+DB_HOST=pg.local.tgs.com
+DB_NAME=thegodstack
+DB_USER=postgres
+DB_PASS=12345678
