--- a/.env_example_prd
+++ b/.env_example_prd
@@ -1,5 +1,11 @@
-ENVIRONMENT=development
+ENVIRONMENT=production
 API_URL=api.local.tgs.com
 HTTP_PORT=80
 HTTPS_PORT=443
 CERTIFICATE_EMAIL=mateusz@gmail.com
+
+#DATABASE
+DB_HOST=<DB_HOST>
+DB_NAME=thegodstack
+DB_USER=postgres
+DB_PASS=<DB_PASS>
