--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -36,7 +36,15 @@ services:
       PORT: ${HTTP_PORT}
       NODE_ENV: '${ENVIRONMENT}'
       APP_ENV: '${ENVIRONMENT}'
-    command: '.s2i/bin/assemble'
+    command:
+      [
+        './wait-for-it.sh',
+        '-t',
+        '0',
+        '${DB_HOST}:5432',
+        '--',
+        '.s2i/bin/assemble',
+      ]
     labels:
       traefik.enable: true
       traefik.http.routers.api-web.rule: Host(`${${API_URL}}`)
