--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "apollo-server": "^2.24.1",
     "graphql": "^15.5.0",
-    "graphql-tools": "^7.0.5"
+    "graphql-tools": "^7.0.5",
+    "knex": "^0.95.6",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "eslint": "^7.27.0",
